# Linkedin_Post_Generator

./: .dockerignore  .gitignore  Dockerfile  README.md  Testing.ipynb  docker-compose.dynamodb.yml  example.env  main.py  pyproject.toml
.streamlit/: config.toml
app/: config.py  creator_tracking.py  deep_research_agent.py  graph_state_schema.py  langchain_deep_search.py  linkedin_playwright_scraper.py  travily_tool.py
app/api/: main.py  schemas.py  services.py
app/db/: dynamodb.py
app/llms/: claude.py  llm_structure_schema.py  prompts.py
app/nodes/: guardrail_node.py  post_nodes.py
backend/: .dockerignore  Dockerfile  Dockerfile.lambda  Testing.ipynb  example.env  json_to_csv_leads.py  leads.json  leads_output.csv  main.py  pyproject.toml  serverless.yml
backend/.serverless/: cloudformation-template-update-stack.json  serverless-state.json
backend/app/: __init__.py  brainstorm_jobs.py  brainstorm_worker.py  conditional_edges.py  config.py  content_workflows.py  creator_tracking.py  extension_scraping.py  extract_resume_details.py  graph_state.py  lambda_handler.py  langchain_deep_search.py  linkedin_playwright_scraper.py  post_formatting.py  (+7 more)
docs/: app_features.md  fifth_plan_draft.md  first_plan_draft.md  fourth_plan_draft.md  second_plan_draft.py  seventh_plan_draft.md  sixth_plan_draft.md  some_personal_things.md  third_plan_draft.md
extention/: background.js  content.js  manifest.json  options.html  options.js  popup.html  popup.js  styles.css
frontend/: .env.example  package-lock.json  package.json
streamlit_ui/: app.py
test/: conftest.py
(+88 files in other folders)
