[project]
name = "linkedin-post-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.43.38",
    "deepagents>=0.6.11",
    "fastapi>=0.138.2",
    "httpx>=0.28.1",
    "langchain>=1.3.10",
    "langchain-anthropic>=1.4.6",
    "langchain-google-genai>=4.2.5",
    "langchain-groq>=1.1.3",
    "langchain-tavily>=0.2.18",
    "langgraph>=1.2.6",
    "markdownify>=1.2.2",
    "playwright>=1.61.0",
    "pydantic>=2.13.4",
    "pypdf>=6.14.0",
    "pytest>=9.1.1",
    "python-dotenv>=1.2.2",
    "streamlit>=1.41.0",
    "tavily-python>=0.7.26",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "pip>=26.1.2",
]
